fix padding on mobile page and cascade order issues, get top border to appear on inventory page

--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -129,7 +129,9 @@
     justify-content: space-between;
     border-top: solid 1px $secondary-cloud;
     &:nth-of-type(2) {
-      border-top: none;
+      @include tablet {
+        border-top: none;
+      }
     }
 
     @include tablet {
